refactor, fix: add fields to question, quiz and filter; seperate admin api; update auth config; small bug fix