@@ -2,7 +2,6 @@ package com.vuongle.imagine.models;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.vuongle.imagine.constants.UserRole;
-import com.vuongle.imagine.services.core.auth.impl.UserDetailsImpl;
 import jakarta.validation.constraints.Email;
 import jakarta.validation.constraints.NotEmpty;
 import lombok.AllArgsConstructor;
@@ -14,18 +13,19 @@ import org.springframework.data.annotation.Id;
 import org.springframework.data.annotation.LastModifiedDate;
 import org.springframework.data.mongodb.core.mapping.Document;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
 
 import java.io.Serializable;
 import java.time.Instant;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
 @Document("user")
-public class User implements Serializable {
+public class User implements Serializable, UserDetails {
 
     @Id
     private ObjectId id;
@@ -52,6 +52,10 @@ public class User implements Serializable {
 
     private Set<UserRole> roles;
 
+    private boolean locked;
+
+    private boolean enabled;
+
     public User(
             String username,
             String fullName,
@@ -66,14 +70,46 @@ public class User implements Serializable {
         this.roles = new HashSet<>(roles);
     }
 
-    public User(UserDetailsImpl userDetail) {
-        this.id = userDetail.getId();
-        this.username = userDetail.getUsername();
-        this.fullName = userDetail.getFullName();
-        this.email = userDetail.getEmail();
-        this.roles = new HashSet<>(userDetail.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .map((UserRole::valueOf))
-                .toList());
+    public User(ObjectId id, String username, String email, String password, String fullName,
+                           Collection<? extends GrantedAuthority> authorities) {
+        this.id = id;
+        this.username = username;
+        this.email = email;
+        this.password = password;
+        this.fullName = fullName;
+        this.roles = authorities.stream().map(item -> UserRole.valueOf(item.getAuthority())).collect(Collectors.toSet());
+    }
+
+    @Override
+    public Collection<? extends GrantedAuthority> getAuthorities() {
+        return roles.stream().map(role -> new SimpleGrantedAuthority(role.name())).collect(Collectors.toList());
+    }
+
+    @Override
+    public boolean isAccountNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isAccountNonLocked() {
+        return true;
+    }
+
+    @Override
+    public boolean isCredentialsNonExpired() {
+        return true;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return true;
+    }
+
+    @Override
+    public boolean equals(Object obj) {
+        if (this == obj) return true;
+        if (obj == null || getClass() != obj.getClass()) return false;
+        User user = (User) obj;
+        return Objects.equals(id, user.getId());
     }
 }
